Changed the subtitle

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Tourism</h1>
     </div>
     <div>
-        <h2>What tourism means</h2>
+        <h2>What is tourism?</h2>
         <p>Tourism comprises the activities of persons travelling to and staying in places outside their usual environment for not more than one consecutive year (12 months) for leisure, business or other purposes.</p>
     </div>
     <div>
